--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@types/slick-carousel": "^1.6.37",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "i18next": "^22.4.9",
     "next": "13.1.6",
+    "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
