--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/react-dom": "18.0.10",
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
+    "@types/yup": "^0.32.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
+    "formik": "^2.2.9",
     "i18next": "^22.4.9",
     "next": "13.1.6",
     "next-i18next": "^13.1.5",
@@ -30,7 +33,8 @@
     "react-i18next": "^12.1.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
