--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4",
     "yup": "^1.0.0"
