Add address picker components

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.11.6",
     "@mui/styles": "^5.11.7",
     "@next/font": "13.1.6",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -33,6 +34,7 @@
     "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
