--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
     "@types/yup": "^0.32.0",
+    "axios": "^1.3.4",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
