--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@next/font": "13.1.6",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.0.10",
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
@@ -33,6 +33,7 @@
     "i18next": "^22.4.9",
     "next": "13.1.6",
     "next-i18next": "^13.1.5",
+    "next-redux-wrapper": "7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
@@ -40,6 +41,7 @@
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4",
     "yup": "^1.0.0"
