--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4",
+    "uuidv4": "^6.2.13",
     "yup": "^1.0.0"
   },
   "devDependencies": {
