--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-i18next": "^12.1.5",
+    "react-number-format": "^5.2.2",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
