--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-i18next": "^12.1.5",
     "react-number-format": "^5.2.2",
     "react-redux": "^8.0.5",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
