--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "18.0.10",
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
     "@types/yup": "^0.32.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.30.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
@@ -39,6 +42,8 @@
     "next-i18next": "^13.1.5",
     "next-redux-wrapper": "7.0.5",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-i18next": "^12.1.5",
